# autotools-library-template

./: .gitignore  README.md  configure.ac
foo/: Makefile.am  configure.ac
foo/src/: main.c
libfoo/: Makefile.am  configure.ac  foo.pc.in
libfoo/src/: libfoo.c  libfoo.h
project-group/: Makefile.am
